<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.myapplication.MainActivity">

    <item
        android:id="@+id/satellite"
        android:title="@string/satellite"
        app:showAsAction="never" />

    <item
        android:id="@+id/hybrid"
        android:title="@string/hybrid"
        app:showAsAction="never" />

    <item
        android:id="@+id/terrain"
        android:title="@string/terrain"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>